<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/init_time_label"
        android:textSize="30dp" />

    <Button
        android:id="@+id/b1minute"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDisplay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/add_minute"
        android:textSize="20dp" />

    <Button
        android:id="@+id/b10minutes"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b1minute"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/add_10_minutes"
        android:textSize="20dp" />

    <Button
        android:id="@+id/b30minutes"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b10minutes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/add_30_minutes"
        android:textSize="20dp" />

    <Button
        android:id="@+id/bStart"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b30minutes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/start_timer"
        android:textSize="20dp" />

    <Button
        android:id="@+id/bClear"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bStart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/clear_timer"
        android:textSize="20dp" />

    
</RelativeLayout>
